Added MoveResponse to return the new game state on each valid move request
