# src/main/kotlin/de/timbachmann/api/model/response/MoveResponse.kt
@@ -1,0 +1,8 @@
+package de.timbachmann.api.model.response
+
+import de.timbachmann.api.engine.GameState
+
+data class MoveResponse(
+    val moveSucceeded: Boolean,
+    val newGameState: GameState
+)
